# Derived_copy

./: CMakeLists.txt  README.md
include/: map_grid_cost_function.h  obstacle_cost_function.h  oscillation_cost_function.h  trajectory_cost_function.h  twirling_cost_function.h
src/: map_grid_cost_function.cpp  obstacle_cost_function.cpp  oscillation_cost_function.cpp  test.cpp  twirling_cost_function.cpp
